# cmake-project-template

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
.github/workflows/: ci.yaml
cmake/: CompileOptions.cmake  Environment.cmake  Sanitizers.cmake
core/: CMakeLists.txt
core/include/: greeter.hpp
core/src/: greeter..cpp  greeter.cpp
test/: CMakeLists.txt  greeter_test.cpp
